--- a/players/templates/home.html
+++ b/players/templates/home.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="vertical-center">
         <a href="{% url 'gtn-page' %}"
-          ><button class="game" id="gtnid">Gusess The Game</button></a
+          ><button class="game" id="gtnid">Guess The Game</button></a
         >
         <a href="{% url 'rd-page' %}"
           ><button class="game" id="rdid">Rolling Dice</button></a
